<resources>
    <string name="app_name">arcana mini</string>

    <string name="welcome">Welcome back,</string>
    <string name="welcome_init">Welcome,</string>
    <string name="placeholder_date">MMM dd, yyyy</string>

    <string name="spread_type">Spread</string>
    <string name="spread_intent">Unknown</string>
    <string name="spread_time">(hh:mmxx)</string>

    <string name="empty_header">The future is a little blurry</string>
    <string name="empty_content"><u>Start your first reading of the day</u></string>
    <string name="empty_desc">Illustration of a confused crystal ball character</string>
    <string name="reflect_desc">Illustration of a hyper-aware crystal ball character</string>

    <string name="librarium_title">The Librarium</string>
    <string name="minor_button_text">Minor arcana/suits</string>
    <string name="major_button_text">Major arcana</string>
    <string name="techniques_button_text">Basic techniques</string>
    <string name="meet_the_cards">Meet the cards</string>
    <string name="spreads_methods">Spreads and methods</string>

    <string name="librarium_path">librariumdatabase.db</string>
    <!-- values for initializing card spinner-->
    <string-array name="card_status_array">
        <item>upright</item>
        <item>reversed</item>
    </string-array>

    <string name="notesDetailsText">Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_librarium2">LibrariumActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="captureImageButtonText">Take photo</string>
    <string name="addPhotoButtonText">Add photo</string>
    <string name="saveNewReflectionButtonText">Save reflection</string>
    <string name="startReflectionButtonText">Start reflection</string>
    <string name="newReflectionNotePromptText">Start writing here...</string>
    <string name="reflectionModeInstruction1">Sit your phone to the side on a flat surface to begin.</string>
    <string name="reflectionModeInstruction2">After a minute has passed, your phone will vibrate to let you know that your reflection time is over.</string>
    <string name="reflectionModeTitle">Let the mind wander...</string>
    <string name="reflectionModeStartButton">Start</string>

    <string name="editReflectionButtonText">Edit</string>
    <string name="saveReflectionButtonText">Save</string>
    <string name="deleteReflectionButtonText">Delete</string>
    <string name="preference_file_key">preferences</string>


    <!--    onboarding strings -->
    <string name="onboarding1_text">the casual-est tarot journal</string>
    <string name="onboarding1_button">Get started</string>
    <string name="onboarding2_button">Enter</string>
    <string name="onboarding2_text">What\'s your name?</string>
    <string name="onboarding2_editText">Your name</string>
    <string name="onboarding3_text">What\'s your style?</string>
    <string name="orangeModeTextOption">Orange</string>
    <string name="greenModeTextOption">Green</string>
    <string name="pinkModeTextOption">Pink</string>
    <string name="onboarding4_text">You\'re all set.</string>
    <string name="onboarding4_button">Lets go!</string>
    <string name="accountColourText">Choose a color:</string>
    <string name="accountNameText">What\'s your name?</string>
    <string name="accountTitleText">Account settings</string>

</resources>