<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OnBoarding2Fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="32dp"
        android:paddingRight="16dp"
        android:paddingBottom="32dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/onboarding2_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sm" />

        <EditText
            android:id="@+id/onboardingNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/onboarding2_editText"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/onboarding2Button1"
            style="@style/StandardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_button"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/onboarding2Button2"
            style="@style/GreyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_button"
            app:backgroundTint="@null" />
    </LinearLayout>
</FrameLayout>