<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibrariumFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/librariumTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16sp"
            android:paddingTop="32sp"
            android:text="@string/librarium_title"
            android:textColor="#000000"
            android:textSize="@dimen/text_lg" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/meet_the_cards"
                    android:textColor="@color/black" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_arcanaMajor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8sp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="8sp"
                    app:contentPadding="16sp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/major_button_text"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_base" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_arcanaMinor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8sp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="8sp"
                    app:contentPadding="16sp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minor_button_text"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_base" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/spreads_methods"
                    android:textColor="@color/black" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_spreadsMethods"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:layout_marginBottom="32sp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="8sp"
                    app:contentPadding="16sp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/techniques_button_text"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_base" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>