<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dip"
    android:paddingTop="32dip"
    android:paddingRight="16dip"
    android:paddingBottom="32dip"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <view
                android:id="@+id/previewView"
                class="androidx.camera.view.PreviewView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="0" />

            <ImageView
                android:id="@+id/imageViewCapturedImg"
                android:layout_width="match_parent"
                android:layout_height="240dip"
                android:layout_gravity="top"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/buttonCaptureShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/captureImageButtonText" />

            <TextView
                android:id="@+id/newReflectionTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="@dimen/text_lg" />

            <TextView
                android:id="@+id/newReflectionNotesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notesDetailsText"
                android:textColor="@color/black"
                android:textSize="@dimen/text_base" />

            <EditText
                android:id="@+id/newReflectionContentEditText"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="@dimen/text_base" />

            <Button
                android:id="@+id/newReflectionSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveNewReflectionButtonText" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>